# C-BTC

./: CMakeLists.txt  README.md
Ini/: Macd值.json  Socket.json  Socket2.json  数据相关配置.json
src/: main.cpp
src/OverallClass/: ConfigurationFile.h  Hand.h  NetworkStrData.h  Overall.cpp  Overall.h  SocketType.h
src/Timer/: TimerCount.cpp  TimerCount.h
src/TradeRun/: Algorithm.cpp  Algorithm.h  BOLL.cpp  BOLL.h  KDJ.cpp  KDJ.h  MACD.cpp  MACD.h  MainTrade.cpp  MainTrade.h  NewFileSave.cpp  NewFileSave.h  RSI.cpp  RSI.h  SAR.cpp  SAR.h  TradeMacd.cpp  TradeMacd.h
src/User/: CurlThread.cpp  CurlThread.h  UserAnalysis.cpp  UserAnalysis.h
src/communication/: BoostPort.cpp  BoostPort.h  BoostTCP.cpp  BoostTCP.h  BoostUDP.cpp  BoostUDP.h  InputToOutput.cpp  InputToOutput.h  Json.cpp  Json.h  QCurl.cpp  QCurl.h
